# cobra-fseof

./: LICENSE  README.md  pyproject.toml  setup.cfg
cobra_fseof/: __init__.py  fseof.py
cobra_fseof/examples/lycopene/: lycopene_fseof_demo.ipynb
examples/lycopene/: dh5_alpha.py  fseof_additions.py  fseof_media.py  lycopene_fseof_demo.ipynb
