[metadata]
name = cobra_fseof
version = attr: cobra_fseof.__version__
description = "A COBRApy implementation of the FSEOF algorithm."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/igem-toronto/cobra-fseof
author = iGEM Toronto 2023 Dry Lab Team
license = MIT
license_file = LICENSE.txt
platforms = any

[options]
packages =
    cobra_fseof
install_requires =
    cobra>=0.25
    tqdm
python_requires = >=3.8
include_package_data = True
zip_safe = False